<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL" Id="{723f8d7e-b51b-45f9-a87d-77ccdd2fd663}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	_MotorOnOff				:BOOL;
	_SensorCovered			:BOOL;
	_Switch					:BOOL;
	_PackageIsPlaced		:BOOL;
	_RetainedTimeOnConveyor	:TIME;
	_MovementTime			:TIME := T#10S;		//How long it takes for the package to move through the conveyor
	_InsertPackage			:BOOL;
	_RemovePackage			:BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>